01-newvpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Reference Architecture to host LAMP on AWS - Creates New VPC
Parameters:
  AvailabilityZones:
    Description: >-
      List of Availability Zones to use for the subnets in the VPC. Note: The
      logical order is preserved.
    Type: 'List<AWS::EC2::AvailabilityZone::Name>'
  NumberOfAZs:
    AllowedValues:
      - 2
      - 3
      - 4
      - 5
      - 6
    Default: 3
    Description: >-
      Number of Availability Zones to use in the VPC. This must match your
      selections in the list of Availability Zones parameter.
    Type: Number
  VpcCidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
    Type: String
  VpcTenancy:
    AllowedValues:
      - default
      - dedicated
    Default: default
    Description: The allowed tenancy of instances launched into the VPC
    Type: String
  DataSubnet0Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.100.0/24
    Description: CIDR block for data subnet 0 located in Availability Zone 0
    Type: String
  DataSubnet1Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.101.0/24
    Description: CIDR block for data subnet 1 located in Availability Zone 1
    Type: String
  DataSubnet2Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.102.0/24
    Description: CIDR block for data subnet 2 located in Availability Zone 2
    Type: String
  DataSubnet3Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.103.0/24
    Description: CIDR block for data subnet 3 located in Availability Zone 3
    Type: String
  DataSubnet4Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.104.0/24
    Description: CIDR block for data subnet 4 located in Availability Zone 4
    Type: String
  DataSubnet5Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.105.0/24
    Description: CIDR block for data subnet 5 located in Availability Zone 5
    Type: String
  PublicSubnet0Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.200.0/24
    Description: CIDR block for Public subnet 0 located in Availability Zone 0
    Type: String
  PublicSubnet1Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.201.0/24
    Description: CIDR block for Public subnet 1 located in Availability Zone 1
    Type: String
  PublicSubnet2Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.202.0/24
    Description: CIDR block for Public subnet 2 located in Availability Zone 2
    Type: String
  PublicSubnet3Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.203.0/24
    Description: CIDR block for Public subnet 3 located in Availability Zone 3
    Type: String
  PublicSubnet4Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.204.0/24
    Description: CIDR block for Public subnet 4 located in Availability Zone 4
    Type: String
  PublicSubnet5Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.205.0/24
    Description: CIDR block for Public subnet 5 located in Availability Zone 5
    Type: String
  WebSubnet0Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/22
    Description: CIDR block for Web subnet 0 located in Availability Zone 0
    Type: String
  WebSubnet1Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.4.0/22
    Description: CIDR block for Web subnet 1 located in Availability Zone 1
    Type: String
  WebSubnet2Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.8.0/22
    Description: CIDR block for Web subnet 2 located in Availability Zone 2
    Type: String
  WebSubnet3Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.12.0/22
    Description: CIDR block for Web subnet 3 located in Availability Zone 3
    Type: String
  WebSubnet4Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.16.0/22
    Description: CIDR block for Web subnet 4 located in Availability Zone 4
    Type: String
  WebSubnet5Cidr:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.20.0/22
    Description: CIDR block for Web subnet 5 located in Availability Zone 5
    Type: String
Conditions:
  NumberOfAZs1: !Equals
    - '1'
    - !Ref NumberOfAZs
  NumberOfAZs2: !Equals
    - '2'
    - !Ref NumberOfAZs
  NumberOfAZs3: !Equals
    - '3'
    - !Ref NumberOfAZs
  NumberOfAZs4: !Equals
    - '4'
    - !Ref NumberOfAZs
  NumberOfAZs5: !Equals
    - '5'
    - !Ref NumberOfAZs
  NumberOfAZs6: !Equals
    - '6'
    - !Ref NumberOfAZs
  AZ0: !Or
    - !Condition NumberOfAZs1
    - !Condition NumberOfAZs2
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ1: !Or
    - !Condition NumberOfAZs2
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ2: !Or
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ3: !Or
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ4: !Or
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ5: !Condition NumberOfAZs6
Resources:
  WebSubnet0:
    Condition: AZ0
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet0Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet0 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 35defdf4-6a31-4618-8b64-2dd6cc1dc90a
  WebSubnet1:
    Condition: AZ1
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet1Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet1 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9955a238-3262-4053-b9c2-8d988bb135cc
  WebSubnet2:
    Condition: AZ2
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet2Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet2 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ac9c7118-e87a-4320-9b1e-eb3cf92b8abc
  WebSubnet3:
    Condition: AZ3
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 3
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet3Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet3 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6e7a9ebc-0119-4093-9623-9ef5af208d25
  WebSubnet4:
    Condition: AZ4
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 4
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet4Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet4 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bae01483-1321-4cc3-903b-cc3426118548
  WebSubnet5:
    Condition: AZ5
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 5
        - !Ref AvailabilityZones
      CidrBlock: !Ref WebSubnet5Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WebSubnet5 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9a64d6ac-0b26-4823-9b89-b05aa51a5c18
  WebSubnetRouteTableAssociation0:
    Condition: AZ0
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable0
      SubnetId: !Ref WebSubnet0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fb860b6f-d92a-432e-ae8d-2296fcecf66d
  WebSubnetRouteTableAssociation1:
    Condition: AZ1
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable1
      SubnetId: !Ref WebSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 38ade7bc-1fc9-4441-8a57-68f090d0095f
  WebSubnetRouteTableAssociation2:
    Condition: AZ2
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable2
      SubnetId: !Ref WebSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 466f2e8e-f413-468e-a7b0-68c08e21b7fe
  WebSubnetRouteTableAssociation3:
    Condition: AZ3
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable3
      SubnetId: !Ref WebSubnet3
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0013afc7-1d5b-4fd8-94b6-a1d232725e7d
  WebSubnetRouteTableAssociation4:
    Condition: AZ4
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable4
      SubnetId: !Ref WebSubnet4
    Metadata:
      'AWS::CloudFormation::Designer':
        id: cf52f548-d603-421e-8f0c-4f9ae507b089
  WebSubnetRouteTableAssociation5:
    Condition: AZ5
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable5
      SubnetId: !Ref WebSubnet5
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 709edcf4-215f-4b56-af1a-47ed3627d77d
  DataSubnet0:
    Condition: AZ0
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet0Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet0 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 921571e4-39cd-4ccd-b2e5-6b33f7262a87
  DataSubnet1:
    Condition: AZ1
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet1Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet1 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2d6e67d4-e6ac-45d9-af7a-4191e0b2ac3a
  DataSubnet2:
    Condition: AZ2
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet2Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet2 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ac4474b6-70f2-4c22-8b50-9be952c7ba50
  DataSubnet3:
    Condition: AZ3
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 3
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet3Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet3 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2538c848-1329-4c95-ac1f-badbcd4830f7
  DataSubnet4:
    Condition: AZ4
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 4
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet4Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet4 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1267c764-62f2-4721-a88b-8defaf2d7b1a
  DataSubnet5:
    Condition: AZ5
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 5
        - !Ref AvailabilityZones
      CidrBlock: !Ref DataSubnet5Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'DataSubnet5 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9707d09b-9e9f-486f-93b4-b50a02c8ba31
  DataSubnetRouteTableAssociation0:
    Condition: AZ0
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable0
      SubnetId: !Ref DataSubnet0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0cb745e8-917a-437f-8f0d-921fa0789226
  DataSubnetRouteTableAssociation1:
    Condition: AZ1
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable1
      SubnetId: !Ref DataSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 77a84fab-fc51-40f2-927a-eb04af09ec5c
  DataSubnetRouteTableAssociation2:
    Condition: AZ2
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable2
      SubnetId: !Ref DataSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3ec51c88-b621-476e-a91c-9e0949eaa9ff
  DataSubnetRouteTableAssociation3:
    Condition: AZ3
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable3
      SubnetId: !Ref DataSubnet3
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 373856bf-03eb-47e7-baa0-90eace330a22
  DataSubnetRouteTableAssociation4:
    Condition: AZ4
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable4
      SubnetId: !Ref DataSubnet4
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 26b39c62-f6b9-4d90-8768-dd44182038e8
  DataSubnetRouteTableAssociation5:
    Condition: AZ5
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NatRouteTable5
      SubnetId: !Ref DataSubnet5
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5589b517-9f49-4ed3-b3c4-62180934a87d
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'InternetGateway / '
              - !Ref 'AWS::StackName'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 54667303-cc58-415e-bbb3-006ca7b43759
  AttachInternetGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 84d31e98-8ef1-4ad6-9c72-dea10501a8c6
  NatEIP0:
    Condition: AZ0
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 411c5bab-80ce-4e53-af39-f783233a1a3f
  NatGateway0:
    Condition: AZ0
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP0.AllocationId
      SubnetId: !Ref PublicSubnet0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 03cb386a-e0a9-4332-9e03-39e7aa7b6417
  NatRoute0:
    Condition: AZ0
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable0
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3006ea3c-5db0-4f1e-b569-88730ed324b5
  NatRouteTable0:
    Condition: AZ0
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable0 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5a44242e-83c4-4699-ac63-bf066fe7e0e1
  NatEIP1:
    Condition: AZ1
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f6aaccdf-d39a-42c7-b872-a13914036fb4
  NatGateway1:
    Condition: AZ1
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8b7ee34f-be4f-4715-9ffb-859099df17f8
  NatRoute1:
    Condition: AZ1
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3aa3ccd4-1932-42d4-9166-6bdc6407fcee
  NatRouteTable1:
    Condition: AZ1
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable1 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7cf7bbf0-9e49-45b8-94f8-6218da9a03c4
  NatEIP2:
    Condition: AZ2
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9750c83f-8e67-44f7-9160-3792047e057a
  NatGateway2:
    Condition: AZ2
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c376756e-0906-40c4-9c01-ee5f4fb12152
  NatRoute2:
    Condition: AZ2
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a6e467fe-efd0-4898-a234-df441d5a4fdb
  NatRouteTable2:
    Condition: AZ2
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable2 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fd78718c-f0c4-434a-a554-e1ee910ffd3e
  NatEIP3:
    Condition: AZ3
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9aeca327-1a38-4216-8842-ad8b9760c346
  NatGateway3:
    Condition: AZ3
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP3.AllocationId
      SubnetId: !Ref PublicSubnet3
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d8c0de00-e052-4a0a-abf5-9f467fae6ae5
  NatRoute3:
    Condition: AZ3
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable3
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway3
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6ed12d08-8789-4f14-b8da-05af4d99e521
  NatRouteTable3:
    Condition: AZ3
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable3 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 27a7f953-ed5a-4303-8dc3-3eb54569fd68
  NatEIP4:
    Condition: AZ4
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4b757532-53bf-4d7d-913b-90cdc1d32097
  NatGateway4:
    Condition: AZ4
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP4.AllocationId
      SubnetId: !Ref PublicSubnet4
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ab2c766a-f909-48d6-80ed-1ecc82a96173
  NatRoute4:
    Condition: AZ4
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable4
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway4
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8930b983-3b7e-4bce-a30f-6846b253cf34
  NatRouteTable4:
    Condition: AZ4
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable4 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9ebf2228-6026-432b-ad78-e97b4a655608
  NatEIP5:
    Condition: AZ5
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 95b08f0f-fe86-4bb6-9b0c-849f4d7d9427
  NatGateway5:
    Condition: AZ5
    Type: 'AWS::EC2::NatGateway'
    DependsOn: AttachInternetGateway
    Properties:
      AllocationId: !GetAtt NatEIP5.AllocationId
      SubnetId: !Ref PublicSubnet5
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 637bcd25-e866-4231-92f2-e0baaffbccc4
  NatRoute5:
    Condition: AZ5
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NatRouteTable5
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway5
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 49b088ed-c640-4d48-880a-74f7f4ce814a
  NatRouteTable5:
    Condition: AZ5
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'NatRouteTable5 / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5cdc72d0-1da1-4321-8de2-ccfcfaefa035
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6684dc9a-bba5-4375-a150-0f5291401a2a
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicRouteTable / '
              - !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a66e58df-0aed-4b53-a789-deeccfc1220f
  PublicRouteTableAssociation0:
    Condition: AZ0
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet0
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: df6e972c-db9b-4b32-bdfa-ff42a5fba469
  PublicRouteTableAssociation1:
    Condition: AZ1
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: eb0923f6-a660-42a0-8a72-3146be86ee01
  PublicRouteTableAssociation2:
    Condition: AZ2
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: afb60830-d655-4bbd-9e1c-f68247a0e444
  PublicRouteTableAssociation3:
    Condition: AZ3
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 253293ce-40ae-416c-81ef-b2070b500424
  PublicRouteTableAssociation4:
    Condition: AZ4
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet4
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 089bf921-ea03-4327-b1cb-e3e6060756da
  PublicRouteTableAssociation5:
    Condition: AZ5
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet5
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: da226f88-9432-4481-8700-18ea3fde2526
  PublicSubnet0:
    Condition: AZ0
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet0Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet0 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e3203fa8-8b08-4873-b416-6fb9f2cace32
  PublicSubnet1:
    Condition: AZ1
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet1Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet1 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: beabea1c-cbef-4bb5-a984-49e8c94885c7
  PublicSubnet2:
    Condition: AZ2
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet2Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet2 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e093e1c2-cae6-4f0c-9930-d6dfb4d24e35
  PublicSubnet3:
    Condition: AZ3
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 3
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet3Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet3 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: df1e6b94-eb0b-4465-9bef-f178adc6cd6b
  PublicSubnet4:
    Condition: AZ4
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 4
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet4Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet4 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: dca9be91-caf5-47da-952d-30a321e52655
  PublicSubnet5:
    Condition: AZ5
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 5
        - !Ref AvailabilityZones
      CidrBlock: !Ref PublicSubnet5Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'PublicSubnet5 / '
              - !Ref 'AWS::StackName'
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3d94ab46-2b55-4680-8c8b-f982607de189
  Vpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'Vpc / '
              - !Ref 'AWS::StackName'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: fca728e0-879a-4a28-ae08-0e1a7a058125
  VpcFlowLog:
    Type: 'AWS::EC2::FlowLog'
    Properties:
      DeliverLogsPermissionArn: !GetAtt VpcFlowLogsRole.Arn
      LogGroupName: !Join
        - ''
        - - !Ref 'AWS::StackName'
          - '-FlowLog'
      ResourceId: !Ref Vpc
      ResourceType: VPC
      TrafficType: ALL
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6109cd94-5e60-48f6-b73b-239a727cc00e
  VpcFlowLogsLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d8803146-0db5-428b-99de-3713dddfebbd
  VpcFlowLogsRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - 'logs:CreateLogGroup'
                  - 'logs:CreateLogStream'
                  - 'logs:DescribeLogGroups'
                  - 'logs:DescribeLogStreams'
                  - 'logs:PutLogEvents'
                Effect: Allow
                Resource: '*'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c6667d82-adc7-4487-9af8-c23313150fe5
Outputs:
  Vpc:
    Value: !Ref Vpc
  VpcCidr:
    Value: !Ref VpcCidr
  PublicSubnet0:
    Condition: AZ0
    Value: !Ref PublicSubnet0
  PublicSubnet1:
    Condition: AZ1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Condition: AZ2
    Value: !Ref PublicSubnet2
  PublicSubnet3:
    Condition: AZ3
    Value: !Ref PublicSubnet3
  PublicSubnet4:
    Condition: AZ4
    Value: !Ref PublicSubnet4
  PublicSubnet5:
    Condition: AZ5
    Value: !Ref PublicSubnet5
  WebSubnet0:
    Condition: AZ0
    Value: !Ref WebSubnet0
  WebSubnet1:
    Condition: AZ1
    Value: !Ref WebSubnet1
  WebSubnet2:
    Condition: AZ2
    Value: !Ref WebSubnet2
  WebSubnet3:
    Condition: AZ3
    Value: !Ref WebSubnet3
  WebSubnet4:
    Condition: AZ4
    Value: !Ref WebSubnet4
  WebSubnet5:
    Condition: AZ5
    Value: !Ref WebSubnet5
  DataSubnet0:
    Condition: AZ0
    Value: !Ref DataSubnet0
  DataSubnet1:
    Condition: AZ1
    Value: !Ref DataSubnet1
  DataSubnet2:
    Condition: AZ2
    Value: !Ref DataSubnet2
  DataSubnet3:
    Condition: AZ3
    Value: !Ref DataSubnet3
  DataSubnet4:
    Condition: AZ4
    Value: !Ref DataSubnet4
  DataSubnet5:
    Condition: AZ5
    Value: !Ref DataSubnet5
  DataSubnet:
    Value: !If
      - NumberOfAZs1
      - !Ref DataSubnet0
      - !If
        - NumberOfAZs2
        - !Join
          - ','
          - - !Ref DataSubnet0
            - !Ref DataSubnet1
        - !If
          - NumberOfAZs3
          - !Join
            - ','
            - - !Ref DataSubnet0
              - !Ref DataSubnet1
              - !Ref DataSubnet2
          - !If
            - NumberOfAZs4
            - !Join
              - ','
              - - !Ref DataSubnet0
                - !Ref DataSubnet1
                - !Ref DataSubnet2
                - !Ref DataSubnet3
            - !If
              - NumberOfAZs5
              - !Join
                - ','
                - - !Ref DataSubnet0
                  - !Ref DataSubnet1
                  - !Ref DataSubnet2
                  - !Ref DataSubnet3
                  - !Ref DataSubnet4
              - !Join
                - ','
                - - !Ref DataSubnet0
                  - !Ref DataSubnet1
                  - !Ref DataSubnet2
                  - !Ref DataSubnet3
                  - !Ref DataSubnet4
                  - !Ref DataSubnet5
  WebSubnet:
    Value: !If
      - NumberOfAZs1
      - !Ref WebSubnet0
      - !If
        - NumberOfAZs2
        - !Join
          - ','
          - - !Ref WebSubnet0
            - !Ref WebSubnet1
        - !If
          - NumberOfAZs3
          - !Join
            - ','
            - - !Ref WebSubnet0
              - !Ref WebSubnet1
              - !Ref WebSubnet2
          - !If
            - NumberOfAZs4
            - !Join
              - ','
              - - !Ref WebSubnet0
                - !Ref WebSubnet1
                - !Ref WebSubnet2
                - !Ref WebSubnet3
            - !If
              - NumberOfAZs5
              - !Join
                - ','
                - - !Ref WebSubnet0
                  - !Ref WebSubnet1
                  - !Ref WebSubnet2
                  - !Ref WebSubnet3
                  - !Ref WebSubnet4
              - !Join
                - ','
                - - !Ref WebSubnet0
                  - !Ref WebSubnet1
                  - !Ref WebSubnet2
                  - !Ref WebSubnet3
                  - !Ref WebSubnet4
                  - !Ref WebSubnet5
  PublicSubnet:
    Value: !If
      - NumberOfAZs1
      - !Ref PublicSubnet0
      - !If
        - NumberOfAZs2
        - !Join
          - ','
          - - !Ref PublicSubnet0
            - !Ref PublicSubnet1
        - !If
          - NumberOfAZs3
          - !Join
            - ','
            - - !Ref PublicSubnet0
              - !Ref PublicSubnet1
              - !Ref PublicSubnet2
          - !If
            - NumberOfAZs4
            - !Join
              - ','
              - - !Ref PublicSubnet0
                - !Ref PublicSubnet1
                - !Ref PublicSubnet2
                - !Ref PublicSubnet3
            - !If
              - NumberOfAZs5
              - !Join
                - ','
                - - !Ref PublicSubnet0
                  - !Ref PublicSubnet1
                  - !Ref PublicSubnet2
                  - !Ref PublicSubnet3
                  - !Ref PublicSubnet4
              - !Join
                - ','
                - - !Ref PublicSubnet0
                  - !Ref PublicSubnet1
                  - !Ref PublicSubnet2
                  - !Ref PublicSubnet3
                  - !Ref PublicSubnet4
                  - !Ref PublicSubnet5
